roles/servers/files/10.32.16.179/iptables
# Generated by iptables-save v1.3.5 on Wed Dec 19 06:34:18 2012
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]
:LOGGING - [0:0]
-A INPUT -i lo -j ACCEPT

## Allow Access from Josefh VPN IP
-A INPUT -s 192.168.3.1 -p tcp -m tcp --dport 22 -m state --state NEW,ESTABLISHED -j ACCEPT

## Allow Access from old tuyul,
-A INPUT -s 10.32.16.180 -p tcp -m tcp --dport 22 -m state --state NEW,ESTABLISHED -j ACCEPT
-A INPUT -s 10.32.16.186 -p tcp -m tcp --dport 22 -m state --state NEW,ESTABLISHED -j ACCEPT
-A INPUT -s 10.32.16.180 -p udp -m udp --dport 161 -m state --state NEW,ESTABLISHED -j ACCEPT 
-A INPUT -s 10.32.15.190 -p tcp -m tcp --dport 25 -m state --state NEW,ESTABLISHED -j ACCEPT
-A INPUT -s 10.32.16.180 -p tcp -m tcp --dport 25 -m state --state NEW,ESTABLISHED -j ACCEPT
-A INPUT -s 10.32.16.238 -p tcp -m tcp --dport 25 -m state --state NEW,ESTABLISHED -j ACCEPT
-A INPUT -s 10.32.100.18 -p tcp -m tcp --dport 25 -m state --state NEW,ESTABLISHED -j ACCEPT
-A INPUT -s 10.32.100.8 -p tcp -m tcp --dport 25 -m state --state NEW,ESTABLISHED -j ACCEPT

## Allow MySQL Backup from Arun
-A INPUT -s 10.32.100.18 -p tcp -m tcp --dport 3306 -m state --state NEW,ESTABLISHED -j ACCEPT

## Allow Access from ADMIN VLAN 4 for SSH, SMTP and NTOP
-A INPUT -s 10.32.16.64/255.255.255.192 -p tcp -m tcp --dport 25 -m state --state NEW,ESTABLISHED -j ACCEPT
-A INPUT -s 10.32.16.64/255.255.255.192 -p tcp -m tcp --dport 22 -m state --state NEW,ESTABLISHED -j ACCEPT
-A INPUT -s 10.32.16.64/255.255.255.192 -p tcp -m tcp --dport 3001 -m state --state NEW,ESTABLISHED -j ACCEPT 
-A INPUT -s 10.32.16.64/255.255.255.192 -p tcp -m tcp --dport 80 -m state --state NEW,ESTABLISHED -j ACCEPT 
-A INPUT -s 10.32.16.64/255.255.255.192 -p tcp -m tcp --dport 443 -m state --state NEW,ESTABLISHED -j ACCEPT 

## Allow Access from ADMIN VLAN 5 for SSH, SMTP and NTOP
-A INPUT -s 10.32.5.0/255.255.255.0 -p tcp -m tcp --dport 25 -m state --state NEW,ESTABLISHED -j ACCEPT
-A INPUT -s 10.32.5.0/255.255.255.0 -p tcp -m tcp --dport 22 -m state --state NEW,ESTABLISHED -j ACCEPT
-A INPUT -s 10.32.5.0/255.255.255.0 -p tcp -m multiport --dports 3000,3001 -m state --state NEW,ESTABLISHED -j ACCEPT 
-A INPUT -s 10.32.5.0/255.255.255.0 -p tcp -m multiport --dports 80,443 -m state --state NEW,ESTABLISHED -j ACCEPT 
-A INPUT -s 10.32.5.0/255.255.255.0 -p tcp -m multiport --dports 2812,28120,28121 -m state --state NEW,ESTABLISHED -j ACCEPT 

## Allow Access to HTTP/HTTPS services
## from VLAN 11 Mktg
-A INPUT -s 10.32.13.0/255.255.0.0 -p tcp -m tcp --dport 80 -m state --state NEW,ESTABLISHED -j ACCEPT 
-A INPUT -s 10.32.13.0/255.255.0.0 -p tcp -m tcp --dport 443 -m state --state NEW,ESTABLISHED -j ACCEPT 
## from VLAN 9 Telco
-A INPUT -s 10.32.9.0/255.255.0.0 -p tcp -m tcp --dport 443 -m state --state NEW,ESTABLISHED -j ACCEPT 
## from VLAN 6 Dev
-A INPUT -s 10.32.6.0/255.255.0.0 -p tcp -m tcp --dport 443 -m state --state NEW,ESTABLISHED -j ACCEPT 

## from VLAN VPN
-A INPUT -s 192.168.3.0/255.255.255.0 -p tcp -m tcp --dport 80 -m state --state NEW,ESTABLISHED -j ACCEPT 
-A INPUT -s 192.168.3.0/255.255.255.0 -p tcp -m tcp --dport 443 -m state --state NEW,ESTABLISHED -j ACCEPT 
-A INPUT -s 192.168.4.0/255.255.255.0 -p tcp -m tcp --dport 80 -m state --state NEW,ESTABLISHED -j ACCEPT 
-A INPUT -s 192.168.4.0/255.255.255.0 -p tcp -m tcp --dport 443 -m state --state NEW,ESTABLISHED -j ACCEPT 

## Allow fwips-a sending email
-A INPUT -s 10.32.5.0/255.255.255.0 -p tcp -m tcp --dport 25 -m state --state NEW,ESTABLISHED -j ACCEPT

## Allow gitlab sending email
#-A INPUT -s 10.32.6.84 -p tcp -m tcp --dport 22 -m state --state NEW,ESTABLISHED -j ACCEPT
-A INPUT -s 10.32.6.84 -p tcp -m tcp --dport 25 -m state --state NEW,ESTABLISHED -j ACCEPT

# Allow tarantula sending email
-A INPUT -s 10.32.6.60 -p tcp -m tcp --dport 25 -m state --state NEW,ESTABLISHED -j ACCEPT

## Allow 1sec sending email
-A INPUT -s 10.32.16.181 -p tcp -m tcp --dport 25 -m state --state NEW,ESTABLISHED -j ACCEPT

## Allow Repo sending email
-A INPUT -s 10.32.15.88 -p tcp -m tcp --dport 25 -m state --state NEW,ESTABLISHED -j ACCEPT
-A INPUT -s 10.32.15.190 -p tcp -m tcp --dport 25 -m state --state NEW,ESTABLISHED -j ACCEPT

## Allow GSM5 sending email
-A INPUT -s 10.32.16.24 -p tcp -m tcp --dport 25 -m state --state NEW,ESTABLISHED -j ACCEPT

## Allow HRM sending email
-A INPUT -s 10.32.16.245 -p tcp -m tcp --dport 25 -m state --state NEW,ESTABLISHED -j ACCEPT
-A INPUT -s 10.32.16.232 -p tcp -m tcp --dport 25 -m state --state NEW,ESTABLISHED -j ACCEPT

## Allow garbd sending mail
-A INPUT -s 10.32.100.17 -p tcp -m tcp --dport 25 -m state --state NEW,ESTABLISHED -j ACCEPT
-A INPUT -s 10.32.100.5 -p tcp -m tcp --dport 25 -m state --state NEW,ESTABLISHED -j ACCEPT

## Allow crm testing sending mail
-A INPUT -s 10.32.15.112 -p tcp -m tcp --dport 25 -m state --state NEW,ESTABLISHED -j ACCEPT

## Allow input that the output has been established
-A INPUT -m state --state ESTABLISHED -j ACCEPT

## Allow ICMP packets
-A INPUT -p icmp --icmp-type 11 -j ACCEPT

## Log the rest
-A INPUT -j LOGGING
-A LOGGING -m limit --limit 5/min -j LOG --log-prefix "Incoming Dropped: " --log-level 5
-A LOGGING -j DROP


###################################### OUTPUT RULES ############################################
## Allow output that the input has been established
-A OUTPUT -o eth0 -p tcp -m state --state ESTABLISHED -j ACCEPT 
-A OUTPUT -o eth0 -p udp -m state --state ESTABLISHED -j ACCEPT 

## Allow output from loopback
-A OUTPUT -o lo -j ACCEPT 

## Allow output to XL SMPP
-A OUTPUT -d 172.30.203.17 -j ACCEPT 
-A OUTPUT -d 10.174.15.34 -j ACCEPT 

## Allow output to dns server for domain service
-A OUTPUT -d 10.32.16.238 -p udp -m udp --dport 123 -m state --state NEW,ESTABLISHED -j ACCEPT 

## Allow output to ldap server for ldap service
-A OUTPUT -d 10.32.16.241 -p tcp -m tcp --dport 389 -m state --state NEW,ESTABLISHED -j ACCEPT 
-A OUTPUT -d 10.32.16.241 -p tcp -m tcp --dport 636 -m state --state NEW,ESTABLISHED -j ACCEPT 
-A OUTPUT -d 10.32.16.241 -p tcp -m tcp --dport 80 -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -d 10.32.16.241 -p tcp -m tcp --dport 443 -m state --state NEW,ESTABLISHED -j ACCEPT

## Allow output to smsapiv2
-A OUTPUT -d 10.32.10.89 -p tcp -m tcp --dport 8080 -m state --state NEW,ESTABLISHED -j ACCEPT

## Allow output to mysql service
-A OUTPUT -d 10.32.100.7 -p tcp -m tcp --dport 3306 -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -d 10.32.100.8 -p tcp -m tcp --dport 3306 -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -d 10.32.15.8 -p tcp -m tcp --dport 3306 -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -d 10.32.100.19 -p tcp -m tcp --dport 3306 -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -d 10.32.10.202 -p tcp -m tcp --dport 3306 -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -d 10.32.10.104 -p tcp -m tcp --dport 3306 -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -d 10.32.10.11 -p tcp -m tcp --dport 3306 -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -d 10.32.10.85 -p tcp -m tcp --dport 3306 -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -d 10.32.16.232 -p tcp -m tcp --dport 3306 -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -d 10.32.16.245 -p tcp -m tcp --dport 3306 -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -d 10.32.10.39 -p tcp -m tcp --dport 3306 -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -d 10.32.6.242 -p tcp -m tcp --dport 3306 -m state --state NEW,ESTABLISHED -j ACCEPT

## Allow Output to Syslog-NG Server
-A OUTPUT -o eth0 -d 10.32.100.18 -p tcp -m tcp --dport 11 -j ACCEPT
-A OUTPUT -o eth0 -d 10.32.100.18 -p tcp -m tcp --dport 22 -j ACCEPT
-A OUTPUT -o eth0 -d 10.32.100.18 -p tcp -m multiport --dports 21431:21450 -j ACCEPT

#Allow output to Qserver for Qstatus
-A OUTPUT -d 10.32.10.200 -p tcp -m tcp --dport 22024 -m state --state NEW,ESTABLISHED -j ACCEPT

## Allow output to mail server for smtps service
-A OUTPUT -d 10.32.10.11 -p tcp -m tcp --dport 610 -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -d 10.32.10.11 -p tcp -m tcp --dport 995 -m state --state NEW,ESTABLISHED -j ACCEPT

## Allow output to any hosts for service domain(53), ntp(123), ssh(22), telnet(23), snmp(161), http(80), https(443) and proxy(3128)
-A OUTPUT -p udp -m udp --dport 53 -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -p udp -m udp --dport 161 -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 123 -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 22 -m state --state NEW,ESTABLISHED -j ACCEPT  
-A OUTPUT -p tcp -m tcp --dport 23 -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 80 -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 443 -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 3128 -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -p icmp -j ACCEPT

## Loggin the rest
-A OUTPUT -j LOGGING
-A LOGGING -m limit --limit 5/min -j LOG --log-prefix "Outgoing Dropped: " --log-level 5
-A LOGGING -j DROP

COMMIT
# Completed on Wed Dec 19 06:34:18 2012
